# fasthtml-hf

./: README.md  pyproject.toml  requirements.txt
fasthtml_hf/: __init__.py  backup.py  deploy.py
