[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fasthtml-hf"
version = "0.1.0"
description = "Huggingface deployment for FastHTML"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jeremy Howard", email = "info@fast.ai" },
    { name = "Freddy Boulton", email = "info@fast.ai" }
]
requires-python = ">=3.7, <4"
dependencies = [ "fastcore" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
"Homepage" = "https://github.com/AnswerDotAI/fasthtml-hf"

[project.entry-points.console_scripts]
fh_hf_deploy = "fasthtml_hf:deploy"

